# artemis_control

./: CMakeLists.txt  README.md  package.xml
include/artemis_control/: common.h  parameters.h  trajectory_controller.h  trajectory_controller_node.h
msg/: Actuators.msg
src/: trajectory_controller.cpp  trajectory_controller_node.cpp
